--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.6",
@@ -77,7 +78,7 @@
     "prettier": "2.6.1",
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
-    "superagent": "7.1.1",
+    "superagent": "^7.1.1",
     "ts-jest": "^29.0.3",
     "typescript": "~4.8.4",
     "webpack": "^5.69.1",
