--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "react-router-dom": "^6.9.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
